Fix bug in avatar alignment and main image selector

--- a/sass/the-tweets.scss
+++ b/sass/the-tweets.scss
@@ -32,17 +32,17 @@ section.the-tweets .tweet-header {
   justify-content: space-between;
 }
 
-section.the-tweets .tweet-header > div {
+ .avatar-name {
   display: flex;
 }
 
-section.the-tweets #user-image {
-  vertical-align: super;
+#user-image {
+  // vertical-align: super;
   width: 2rem;
   height: 2rem;
   border-radius: 50%;
-  padding: 2.5px;
-  top: 5px;
+  // padding: 2.5px;
+  // top: 5px;
 }
 
 section.the-tweets .tweet-header > div > p { 
